update copy for submission panel on bounty page and fix pill spacing

--- a/src/containers/Bounty/components/listItems/SubmissionItem.module.scss
+++ b/src/containers/Bounty/components/listItems/SubmissionItem.module.scss
@@ -20,9 +20,6 @@
   }
 }
 
-.detailsContainer {
-}
-
 .filter {
   text-align: left;
 }
@@ -35,6 +32,10 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+
+  span:not(:last-child) {
+    margin-bottom: $m-spacing;
+  }
 }
 
 .submissionContents {
